--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           View my work <i class="fa fa-arrow-circle-right"></i>
         </div>
 
-        <nav class="flex">
+        <nav class="flex headers">
             <div class="link-wrap">
               <div class="page-link active" dest="home">home</div>
               <div class="page-link" dest="about">about</div>
@@ -155,7 +155,7 @@
           </div>
         </div>
 
-        <div class="skills-wrapper flex row-gt-sm">
+        <div class="skills-wrapper flex row-gt-sm tile slide-right">
           <div class="flex flex-50-gt-sm waypoint animated slide-in-left" data-animation="slide-in-left"data-delay="3.5s" style="animation-delay: 3.5s;">
             <img src="img/me.jpg" class="me">
             <!-- <div><img class="up-arrow" src="img/up-arrow.png"></div> -->
@@ -167,7 +167,7 @@
             </div>
           </div>
 
-          <div class="flex flex-50-gt-sm waypoint bars-wrap animated slide-in-right" data-animation="slide-in-right"data-delay="3.5s" style="animation-delay: 3.5s;">
+          <div class="  tile slide-left flex flex-50-gt-sm waypoint bars-wrap animated slide-in-right" data-animation="slide-in-right"data-delay="3.5s" style="animation-delay: 3.5s;">
             <h1></h1>
             <div class="skillbar-wrapper">
               <div class="skillbar clearfix html5" data-percent="90%">
@@ -219,7 +219,7 @@
 
     <!-- PORTFOLIO -->
     <section class="flex" id="portfolio">
-      <div class="header waypoint animated slide-in-right" data-animation="slide-in-right" data-delay="3.5s" style="animation-delay: 3.5s;">
+      <div class="tile fadeIn header waypoint animated slide-in-right" data-animation="slide-in-right" data-delay="3.5s" style="animation-delay: 3.5s;">
         PROJECTS
       </div>
       <div class="header-bar waypoint animated slide-in-right" data-animation="slide-in-right" data-delay="2.3s" style="animation-delay: 2.3s;"></div>
